SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Logs__c/EBizCharge_Logs__c.object-meta.xml
<CustomObject>
    <label>EBizCharge Log</label>
    <nameField>
        <label>EBizCharge Logs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EBizCharge Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>