SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Logs__c/fields/EBizCharge_Log_Level__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Log_Level__c</fullName>
    <label>EBizCharge Log Level</label>
    <length>254</length>
    <type>Text</type>
</CustomField>