SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Logs__c/fields/EBizCharge_Message__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Message__c</fullName>
    <label>EBizCharge Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>