SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Logs__c/fields/EBizCharge_Method_Name__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Method_Name__c</fullName>
    <label>EBizCharge Method Name</label>
    <length>254</length>
    <type>Text</type>
</CustomField>